--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.25.0",
+    "photonkit": "^0.1.2",
     "quasar-extras": "0.x",
     "quasar-framework": "0.14.9",
     "vue": "^2.5.0",
