--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "babel-runtime": "^6.25.0",
+    "markdown-it": "^8.4.0",
     "photonkit": "^0.1.2",
     "quasar-extras": "0.x",
     "quasar-framework": "0.14.9",
     "vue": "^2.5.0",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
