--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "animate.css": "^3.6.1",
     "babel-runtime": "^6.25.0",
+    "file-saver": "^1.3.3",
     "markdown-it": "^8.4.0",
     "photonkit": "^0.1.2",
     "quasar-extras": "0.x",
