--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
   - "lts/*"
 before_script:
+  - sudo apt-get update -qq
+  - sudo apt-get install wine -y
   - npm install -g quasar-cli
 install:
   - npm install
