--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "file-saver": "^1.3.3",
     "html2canvas": "^1.0.0-alpha.9",
     "markdown-it": "^8.4.0",
+    "markdown-it-checkbox": "^1.1.0",
     "photonkit": "^0.1.2",
     "quasar-extras": "0.x",
     "quasar-framework": "0.14.9",
     "vue": "^2.5.0",
-    "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
