--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "vuenite",
   "productName": "Vuenite",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "private": true,
   "license": "MIT",
   "description": "Vuenite is a lightweight note app build on web technologies.",
+  "cordovaId": "org.cordova.exng.vuenite",
   "author": "Johann Behr <johannbehr@exng.de>",
   "homepage": "https://github.com/ExNG/vuenite",
   "repository": {
@@ -12,70 +13,44 @@
     "url": "https://github.com/ExNG/vuenite.git"
   },
   "scripts": {
-    "clean": "node build/script.clean.js",
-    "dev": "node build/script.dev.js",
-    "build": "node build/script.build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "animate.css": "^3.6.1",
-    "babel-runtime": "^6.25.0",
+    "axios": "^0.17.1",
     "file-saver": "^1.3.3",
-    "html2canvas": "^1.0.0-alpha.9",
-    "markdown-it": "^8.4.0",
+    "html2canvas": "^1.0.0-alpha.10",
+    "markdown-it": "^8.4.1",
     "markdown-it-checkbox": "^1.1.0",
     "photonkit": "^0.1.2",
-    "quasar-extras": "0.x",
-    "quasar-framework": "0.14.9",
-    "remark": "^9.0.0",
-    "vue": "^2.5.0",
-    "vue-router": "^3.0.1"
+    "remark": "^9.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "babel-core": "^6.0.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "colors": "^1.1.2",
-    "connect-history-api-fallback": "^1.1.0",
-    "css-loader": "^0.28.7",
-    "es6-promise": "^4.1.1",
-    "eslint": "^4.8.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.2.2",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.16.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "glob": "^7.1.2",
-    "html-webpack-plugin": "^2.30.1",
-    "http-proxy-middleware": "^0.17.0",
-    "json-loader": "^0.5.7",
-    "opn": "^5.0.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "postcss-loader": "^1.0.0",
-    "progress-bar-webpack-plugin": "^1.10.0",
-    "purify-css": "^1.2.6",
-    "shelljs": "^0.7.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "url-loader": "^0.5.7",
-    "vue-loader": "^13.0.5",
-    "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.5.0",
-    "webpack": "^3.6.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.19.1",
-    "webpack-merge": "^4.1.0"
-  }
+    "babel-eslint": "8.2.1",
+    "devtron": "1.4.0",
+    "electron": "1.7.9",
+    "electron-debug": "1.4.0",
+    "electron-devtools-installer": "2.2.1",
+    "electron-packager": "9.1.0",
+    "eslint": "4.15.0",
+    "eslint-config-standard": "10.2.1",
+    "eslint-friendly-formatter": "3.0.0",
+    "eslint-loader": "1.7.1",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-node": "5.2.0",
+    "eslint-plugin-promise": "3.4.0",
+    "eslint-plugin-standard": "3.0.1",
+    "eslint-plugin-vue": "4.0.0",
+    "quasar-cli": "^0.15.2"
+  },
+  "engines": {
+    "node": ">= 8.9.0",
+    "npm": ">= 5.6.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 10"
+  ]
 }
