Set compression level for zip

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ script:
   - cp src/statics/icon.png dist/electron-ios/Vuenite-linux-x64/icon.png
   - cp src/statics/icon.png dist/electron-ios/Vuenite-win32-x64/icon.png
   - cd dist
-  - zip -r vuenite-darwin-x64.zip electron-ios/Vuenite-darwin-x64/
-  - zip -r vuenite-linux-x64.zip electron-ios/Vuenite-linux-x64/
-  - zip -r vuenite-win32-x64.zip electron-ios/Vuenite-win32-x64/
+  - zip -r vuenite-darwin-x64.zip electron-ios/Vuenite-darwin-x64/ -9
+  - zip -r vuenite-linux-x64.zip electron-ios/Vuenite-linux-x64/ -9
+  - zip -r vuenite-win32-x64.zip electron-ios/Vuenite-win32-x64/ -9
 deploy:
   provider: releases
   api_key: $gh_token
