--- a/.travis.yml
+++ b/.travis.yml
@@ -9,21 +9,21 @@ install:
   - npm install
 script:
   - quasar build -m electron -t ios --target all
-  - cp src/statics/icon.png dist/electron-ios/Vuenite-darwin-x64/icon.png
-  - cp src/statics/icon.png dist/electron-ios/Vuenite-linux-x64/icon.png
-  - cp src/statics/icon.png dist/electron-ios/Vuenite-win32-x64/icon.png
+  - cp src/statics/icon.png dist/electron-ios/Vuenote-darwin-x64/icon.png
+  - cp src/statics/icon.png dist/electron-ios/Vuenote-linux-x64/icon.png
+  - cp src/statics/icon.png dist/electron-ios/Vuenote-win32-x64/icon.png
   - cd dist
-  - zip -r vuenite-darwin-x64.zip electron-ios/Vuenite-darwin-x64/ -9
-  - zip -r vuenite-linux-x64.zip electron-ios/Vuenite-linux-x64/ -9
-  - zip -r vuenite-win32-x64.zip electron-ios/Vuenite-win32-x64/ -9
+  - zip -r vuenote-darwin-x64.zip electron-ios/Vuenote-darwin-x64/ -9
+  - zip -r vuenote-linux-x64.zip electron-ios/Vuenote-linux-x64/ -9
+  - zip -r vuenote-win32-x64.zip electron-ios/Vuenote-win32-x64/ -9
 deploy:
   provider: releases
   api_key: $gh_token
   file:
-    - vuenite-darwin-x64.zip
-    - vuenite-linux-x64.zip
-    - vuenite-win32-x64.zip
+    - vuenote-darwin-x64.zip
+    - vuenote-linux-x64.zip
+    - vuenote-win32-x64.zip
   skip_cleanup: true
   on:
-    repo: ExNG/vuenite
+    repo: ExNG/vuenote
     tags: true
