--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "animate.css": "^3.6.1",
+    "axios": "^0.18.0",
     "file-saver": "^1.3.3",
     "html2canvas": "^1.0.0-alpha.10",
     "markdown-it": "^8.4.1",
