Testing debPackage script on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ install:
   - npm install
 script:
   - node_modules/quasar-cli/bin/quasar build -m electron -t ios
-before_deploy:
+# before_deploy:
   - sudo apt-get install wine zip -y
   - node_modules/quasar-cli/bin/quasar build -m electron -t ios --target all
+  - npm run buildDeb
   - cp src/statics/icon.png dist/electron-ios/Vuenote-darwin-x64/icon.png
   - cp src/statics/icon.png dist/electron-ios/Vuenote-linux-x64/icon.png
   - cp src/statics/icon.png dist/electron-ios/Vuenote-win32-x64/icon.png
@@ -17,6 +18,7 @@ before_deploy:
   - cd electron-ios/Vuenote-darwin-x64/ && zip -r ../../vuenote-darwin-x64.zip ./* -9 && cd ../../
   - cd electron-ios/Vuenote-linux-x64/ && zip -r ../../vuenote-linux-x64.zip ./* -9 && cd ../../
   - cd electron-ios/Vuenote-win32-x64/ && zip -r ../../vuenote-win32-x64.zip ./* -9 && cd ../../
+  - ls -lsah
 deploy:
   provider: releases
   api_key: $gh_token
@@ -24,6 +26,7 @@ deploy:
     - vuenote-darwin-x64.zip
     - vuenote-linux-x64.zip
     - vuenote-win32-x64.zip
+    - vuenote.deb
   skip_cleanup: true
   on:
     repo: ExNG/vuenote
