--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - npm install
 script:
   - node_modules/quasar-cli/bin/quasar build -c -m electron -t ios
+  - ls -lsah
 before_deploy:
   - sudo apt-get install wine zip -y
   - node_modules/quasar-cli/bin/quasar build -c -m electron -t ios --target all
