--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.18.0",
     "file-saver": "^1.3.3",
     "html2canvas": "^1.0.0-alpha.10",
+    "ipfs-api": "^20.0.1",
     "markdown-it": "^8.4.1",
     "markdown-it-checkbox": "^1.1.0",
     "moment": "^2.21.0",
