--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "markdown-it-checkbox": "^1.1.0",
     "moment": "^2.21.0",
     "mousetrap": "^1.6.1",
-    "remark": "^9.0.0"
+    "node-sass": "^4.8.3",
+    "remark": "^9.0.0",
+    "sass-loader": "^7.0.1"
   },
   "devDependencies": {
     "babel-eslint": "8.2.1",
