--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_script:
 script:
   - npm run testBuild
   - ls -lsah dist/
-before_deploy:
+# before_deploy:
   - npm run build
   - ls -lsah
 deploy:
