--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ before_script:
 script:
   - npm run testBuild
   - ls -lsah dist/
-# before_deploy:
+before_deploy:
   - npm run build
-  - ls -lsah
+  - ls -lsah dist/
 deploy:
   provider: releases
   api_key: $gh_token
