--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ before_script:
   - sudo apt-get update -qq
 script:
   - npm run testBuild
-  - ls -lsah dist/
+  - ls -lsah dist/ -R
 before_deploy:
   - npm run build
-  - ls -lsah dist/
+  - ls -lsah dist/ -R
 deploy:
   provider: releases
   api_key: $gh_token
