--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "build": "sh scripts/build.sh",
     "buildDeb": "node scripts/build-debian.js",
+    "buildAppImage": "node scripts/build-appimage.js",
     "dev": "sh scripts/dev.sh",
     "lint": "eslint --ext .js,.vue src",
     "test": "node scripts/test.js",
