--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
   - npm run test
   - npm run testBuild
   - ls -lsah dist/
-# before/_deploy:
+before/_deploy:
   - npm run build
   - ls -lsah dist/
 deploy:
@@ -18,6 +18,7 @@ deploy:
     - dist/vuenote-linux-x64.zip
     - dist/vuenote-win32-x64.zip
     - dist/vuenote_amd64.deb
+    - dist/Vuenote.AppImage
   skip_cleanup: true
   on:
     repo: ExNG/vuenote
