--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   },
   "scripts": {
     "build": "sh scripts/build.sh",
-    "buildDeb": "node scripts/build-debian.js",
-    "buildAppImage": "node scripts/build-appimage.js",
     "dev": "sh scripts/dev.sh",
+    "i": "npm install && yarn",
     "lint": "eslint --ext .js,.vue src",
     "test": "node scripts/test.js",
     "testBuild": "sh scripts/test-build.sh"
