--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ script:
   - npm run test
   - npm run testBuild
   - ls -lsah dist/
+before_deploy:
   - npm run build
   - ls -lsah dist/
-# before_deploy:
 deploy:
   provider: releases
   api_key: $gh_token
