--- a/package.json
+++ b/package.json
@@ -33,25 +33,25 @@
     "remark": "^9.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "8.2.1",
+    "babel-eslint": "^8.2.6",
     "devtron": "1.4.0",
-    "electron": "^1.8.7",
-    "electron-debug": "1.4.0",
-    "electron-devtools-installer": "2.2.1",
-    "electron-packager": "9.1.0",
-    "eslint": "4.15.0",
-    "eslint-config-standard": "10.2.1",
-    "eslint-friendly-formatter": "3.0.0",
-    "eslint-loader": "1.7.1",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-node": "5.2.0",
-    "eslint-plugin-promise": "3.4.0",
-    "eslint-plugin-standard": "3.0.1",
-    "eslint-plugin-vue": "4.0.0",
+    "electron": "^2.0.5",
+    "electron-debug": "^2.0.0",
+    "electron-devtools-installer": "^2.2.4",
+    "electron-packager": "^12.1.0",
+    "eslint": "^5.2.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "eslint-plugin-vue": "^4.7.1",
     "node-run-cmd": "^1.0.1",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.2",
+    "quasar-cli": "^0.17.3",
     "quasar-pak": "0.0.2",
-    "quasar-cli": "^0.15.20",
     "sass-loader": "^7.0.1"
   },
   "engines": {
