--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "animate.css": "^3.6.1",
-    "axios": "^0.18.0",
+    "animate.css": "^3.7.0",
     "file-saver": "^1.3.8",
     "markdown-it": "^8.4.1",
     "moment": "^2.22.1",
@@ -29,12 +28,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
-    "devtron": "1.4.0",
-    "electron": "^2.0.5",
-    "electron-debug": "^2.0.0",
-    "electron-devtools-installer": "^2.2.4",
-    "electron-packager": "^12.1.0",
-    "eslint": "^5.2.0",
+    "eslint": "^5.3.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.0",
@@ -43,11 +37,11 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
     "eslint-plugin-vue": "^4.7.1",
-    "node-run-cmd": "^1.0.1",
     "node-sass": "^4.9.2",
-    "quasar-cli": "^0.17.3",
+    "quasar-cli": "^0.17.7",
     "quasar-pak": "0.0.2",
-    "sass-loader": "^7.0.1"
+    "sass-loader": "^7.1.0",
+    "strip-ansi": "=3.0.1"
   },
   "engines": {
     "node": ">= 8.9.0",
